I simply fixed the alignment Issues I had, and decided to call it an early night.

--- a/PvC/index.css
+++ b/PvC/index.css
@@ -44,9 +44,9 @@ div {
 
 #cards {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-top: 20px;
-  width: 1440px;
+  width: 100%;
 }
 #compareTitle {
   display: flex;
@@ -79,7 +79,7 @@ div {
   color: #ffffff;
 }
 #clickText {
-  position: absolute;
+
   width: 363px;
   height: 38px;
   left: 538px;
